[gd_scene load_steps=8 format=3 uid="uid://bfje20nqkjf6r"]

[ext_resource type="Script" path="res://structures/conveyors/splitter/splitter.gd" id="1_1iddr"]
[ext_resource type="Texture2D" uid="uid://b31csdhar13w7" path="res://structures/conveyors/splitter/splitter.png" id="2_i8t6c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5quk4"]
size = Vector2(32, 26)

[sub_resource type="CircleShape2D" id="CircleShape2D_hrp2w"]
radius = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_11gn3"]
radius = 1.0

[sub_resource type="Curve2D" id="Curve2D_58cl5"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, -16, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -16, 0)
}
point_count = 3

[sub_resource type="Curve2D" id="Curve2D_0kwwy"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, -16, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 16, 0)
}
point_count = 3

[node name="Splitter" type="StaticBody2D"]
script = ExtResource("1_1iddr")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_i8t6c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_5quk4")
disabled = true

[node name="Enter" type="Area2D" parent="."]
position = Vector2(0, -15)
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enter"]
shape = SubResource("CircleShape2D_hrp2w")

[node name="ExitLeft" type="Area2D" parent="."]
position = Vector2(-16, 0)
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitLeft"]
shape = SubResource("CircleShape2D_11gn3")
one_way_collision_margin = 0.0

[node name="ExitRight" type="Area2D" parent="."]
position = Vector2(16, 0)
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitRight"]
shape = SubResource("CircleShape2D_11gn3")
one_way_collision_margin = 0.0

[node name="Path2DLeft" type="Path2D" parent="."]
curve = SubResource("Curve2D_58cl5")

[node name="Path2DRight" type="Path2D" parent="."]
curve = SubResource("Curve2D_0kwwy")
